# crisAI

./: .env.example  .gitignore  DOCUMENTATION.md  DOCUMENTATION_DETERMINISTIC_RETRIEVAL.md  LICENSE  README.md  README.md:Zone.Identifier  TESTING.md  env.example  pyproject.toml  requirements-litellm.txt  requirements.txt  start  start-old  test_graph_login.py
.cursor/rules/: Agents.md
.github/workflows/: ci.yml
handover/: README-handover.md
logs/: agent_trace.jsonl
prompts/: README.md  TEMPLATE.md  context_agent.md  context_retrieval_agent.md  context_synthesizer_agent.md  design_agent.md  design_author.md  design_challenger.md  design_refiner.md  discovery_agent.md  judge.md  operations_agent.md  orchestrator.md  publisher.md  retrieval_planner_agent.md  review_agent.md
prompts/_shared/: context-staging.md  link-formatting.md  locale-tone.md  sharepoint-vs-onedrive.md
prompts/operations/: operations_agent.md
registry/: agents.yaml  intranet.yaml  models.yaml  policies.yaml  retrieval_association_graph.yaml  search_synonyms.yaml  semantic_catalog.yaml  servers.yaml  workflow_policy.yaml  workspace_artifact_profiles.yaml
runbooks/: 01-setup.md  02-registry-and-servers.md  03-agents-and-policies.md  04-observability.md  05-security.md
scripts/: bootstrap.sh  run_architecture_workbench.sh  run_cli.sh
src/crisai/: config.py  logging_utils.py  model_resolver.py  ms_graph.py  openai_agents_trace_compat.py  registry.py  runtime.py  (+1 more)
tests/: conftest.py  test_cli_text_assets.py  test_cli_text_loader.py  test_peer_transcript.py
workspace/: .cli_history
(+208 files in other folders)
