[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisai"
version = "0.1.0"
description = "Local AI tool platform for architecture and design work"
requires-python = ">=3.10"

dependencies = [
  "openai-agents>=0.2.10",
  "mcp>=1.10.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "fastapi>=0.115.0",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
  "rich>=13.7.1",
  "prompt_toolkit>=3.0.0",
  "python-docx>=1.1.0",
  "pypdf>=4.0.0",
  "python-pptx>=0.6.0",
  "openpyxl>=3.1.0",
  "chardet>=5.0.0",
  "msal>=1.28.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
litellm = [
  "openai-agents[litellm]>=0.2.10"
]

[project.scripts]
crisai = "crisai.cli.main:app"
crisai-web = "crisai.apps.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
